crates/backyard-lexer/tests/snapshots/variable__basic.snap
---
source: crates/backyard-lexer/tests/variable.rs
expression: tokens
snapshot_kind: text
---
- token_type: Variable
  value:
    - 97
  line: 1
  column: 0
  offset: 0
