crates/backyard-lexer/tests/snapshots/variable__multiple.snap
---
source: crates/backyard-lexer/tests/variable.rs
assertion_line: 24
expression: tokens
snapshot_kind: text
---
- token_type: Variable
  value: ""
  line: 1
  column: 0
  offset: 0
- token_type: Variable
  value: ""
  line: 1
  column: 1
  offset: 1
- token_type: Variable
  value: a
  line: 1
  column: 2
  offset: 2
