crates/backyard-lexer/tests/snapshots/variable__this.snap
---
source: crates/backyard-lexer/tests/variable.rs
expression: tokens
snapshot_kind: text
---
- token_type: This
  value:
    - 116
    - 104
    - 105
    - 115
  line: 1
  column: 0
  offset: 0
